--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
         <img id="heroFrameFullImg" src="" alt="">
     </div>
     <footer>Â© <span id="year"></span> Sining Laban sa Katiwalian</footer>
-    <script src="https://esm.sh/@supabase/supabase-js@2"></script>
-    <script src="assets/js/script.js"></script>
-</body>
+    <script type="module" src="assets/js/script.js"></script>
 
+
+
+</body>
 
 </html>
